[package]
name = "openjarfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winsafe = { version = "0.0.17", features = ["user"]}
winreg = "0.50"
which = "4.4"

[build-dependencies]
embed-manifest = "1.4"
winres = "0.1"
