[package]
name = "openjarfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.61", features = [ "Win32_Foundation", "Win32_UI_WindowsAndMessaging" ]}
winreg = "0.55"
which = "8.0"

[build-dependencies]
embed-manifest = "1.4"
embed-resource = "3.0"
